--- a/source/_posts/一个临时快递员的双十一.md
+++ b/source/_posts/一个临时快递员的双十一.md
@@ -3,6 +3,15 @@ title: 一个临时快递员的双十一
 date: 2018-11-17 11:43:32
 tags:
 ---
+
+文章嵌入百度地图[教程](https://blog.csdn.net/qq_37815596/article/details/80868948)
+<!--more-->
 <center>
-<iframe src="map.html" width="697" height="550" frameborder="0" scrolling="no"></iframe>
+<iframe src="http://www.google.cn/maps/embed?pb=!1m28!1m12!1m3!1d70093.93423126088!2d114.00394548949993!3d22.584390266982375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e3!4m5!1s0x34038a8ea3f24127%3A0xa14e2fae498e949b!2z5p2O5pyX5Zu96ZmF54-g5a6d5Lqn5Lia5ZutIOW5v-S4nOecgea3seWcs-W4gum-meWyl-WMuuW4g-a-nOi3ryDpgq7mlL_nvJbnoIE6IDUxMTcwMA!3m2!1d22.644007!2d114.12654699999999!4m5!1s0x3403eef5f69e972f%3A0xd78ee0e90eff3922!2z5bm_5Lic55yB5rex5Zyz5biC5Y2X5bGx5Yy6!3m2!1d22.533012!2d113.930475!5e0!3m2!1szh-CN!2scn!4v1542599479044" width="697" height="550" frameborder="0" style="border:0" allowfullscreen></iframe>
 </center>
+
+将本地文件提交到github仓库
+[教程1](https://www.jianshu.com/p/c70ca3a02087)
+[解决报错](https://blog.csdn.net/weixin_43211277/article/details/82715355)
+
+[hexo 官方文档](https://hexo.io/zh-cn/docs/tag-plugins.html)
